--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -16,7 +16,7 @@ jobs:
               with: 
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
-            - name: Preparar construccion con Docker Buildx
+            - name: Preparar construcción con Docker Buildx
               uses: docker/setup-buildx-action@v2
             - name: Construir imagen y subirla a dockerhub
               uses: docker/build-push-action@v4
@@ -25,6 +25,5 @@ jobs:
                 file: ./Dockerfile  
                 push: true
                 tags: |
-                 ${{ secrets.DOCKERHUB_USERNAME }}/docker-github-actions:latest
-                 ${{ secrets.DOCKERHUB_USERNAME }}/docker-github-actions:{{ github.sha }}
-            
+                  ${{ secrets.DOCKERHUB_USERNAME }}/docker-github-actions:latest
+                  ${{ secrets.DOCKERHUB_USERNAME }}/docker-github-actions:${{ github.sha }}
